# tosinspector

./: .env.example  .gitignore  Makefile  README.md  build_reqs.txt  design.md  pyproject.toml  requirements.txt  sample_tos.txt
.github/workflows/: push.yaml
tests/: __init__.py  test_embeddings.py  test_qa.py
tosinspector/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  indexer.py  ingestion.py  qa.py  utils.py
